code/human_written_tests/WebAssembly/processed_control_flow_validation/test_if_79.wast
(assert_invalid
  (module
    (func $type-condition-empty-in-block
      (i32.const 0)
      (block (if (then)))
    )
  )
  "type mismatch"
)